feat(commentaires): ajouter les médias et le scroll des citations
