# doc/openapi.yaml
@@ -2757,6 +2757,10 @@ definitions:
         type: string
       content:
         type: string
+      media:
+        type: array
+        items:
+          $ref: '#/definitions/models.MediaRef'
       created_at:
         type: string
       id:
@@ -2779,12 +2783,15 @@ definitions:
         maxLength: 60
   models.CreateCommentRequest:
     type: object
-    required:
-    - content
     properties:
       content:
         type: string
         maxLength: 280
+      media:
+        type: array
+        maxItems: 4
+        items:
+          $ref: '#/definitions/models.MediaRef'
       parent_id:
         type: string
   models.CreatePostRequest:
